Changes to South-East Asia

--- a/main_menu/localization/english/1444_country_names_l_english.yml
+++ b/main_menu/localization/english/1444_country_names_l_english.yml
@@ -9,3 +9,7 @@
  TUO_ADJ: "Turmot"
  YRK: "Yarkand"
  YRK_ADJ: "Yarkand"
+ MUA: "Lan Xang"
+ MUA_ADJ: "Lan Xangian"
+ CHG: "Moghulistan"
+ CHG_ADJ: "Moghulistani"
