--- a/main_menu/localization/english/zz_1444_country_names_l_english.yml
+++ b/main_menu/localization/english/zz_1444_country_names_l_english.yml
@@ -1,5 +1,4 @@
 ﻿l_english:
- timurid_prince: "Monarchy"
  TIM: "Timurids"
  TIM_ADJ: "Timurids"
  TIS: "Samarkand"
@@ -17,3 +16,5 @@
  HZP: "Lorestan"
  HZP_ADJ: "Lorestani"
  timurid_dynasty: "Timurid"
+ AFG: "Afghanistan"
+ AFG_ADJ: "Afghani"
