--- a/main_menu/localization/english/1444_country_names_l_english.yml
+++ b/main_menu/localization/english/1444_country_names_l_english.yml
@@ -293,3 +293,15 @@
  SVT_ADJ: "Svaneti"
  TIN: "Didoeti"
  TIN_ADJ: "Didoeti"
+ TK1: "Takeda"
+ TK1_ADJ: "Takeda"
+ TK1_LONG: "Kai Takeda"
+ TK2: "Takeda"
+ TK2_ADJ: "Takeda"
+ TK2_LONG: "Aki Takeda"
+ TK3: "Takeda"
+ TK3_ADJ: "Takeda"
+ TK3_LONG: "Wakasa Takeda"
+ TK4: "Takeda"
+ TK4_ADJ: "Takeda"
+ TK4_LONG: "Kazusa Takeda"
