Added AQ & QQ to Mesopotamia & Caucasus.

--- a/main_menu/localization/english/1444_country_names_l_english.yml
+++ b/main_menu/localization/english/1444_country_names_l_english.yml
@@ -1,6 +1,10 @@
 ﻿l_english:
  ALR: "Albret"
  ALR_ADJ: "Albret"
+ ADL: "Ardabil"
+ ADL_ADJ: "Ardabil"
+ BGH: "Baghdad"
+ BGH_ADJ: "Baghdad"
  DUO: "Dunois"
  DUO_ADJ: "Dunois"
  NEM: "Nemours"
