Vijay and Friends

--- a/main_menu/localization/english/zz_1444_country_names_l_english.yml
+++ b/main_menu/localization/english/zz_1444_country_names_l_english.yml
@@ -61,7 +61,11 @@
  JJK_ADJ: "Kalinjari"
  KAP: "Kalpi"
  KAP_ADJ: "Kalpi"
-
-
-
- 
+ MAB: "Madurai"
+ MAB_ADJ: "Maduri"
+ ZMR: "Calicut"
+ ZMR_ADJ: "Calicuti"
+ KAY: "Kandy"
+ KAY_ADJ: "Kandian"
+ MYS: "Mysore"
+ MYS_ADJ: "Mysori"
