Bengal and Assam

--- a/main_menu/localization/english/zz_1444_country_names_l_english.yml
+++ b/main_menu/localization/english/zz_1444_country_names_l_english.yml
@@ -75,5 +75,7 @@
  RCH_ADJ: "Teliganani"
  SIR: "Sirhind"
  SIR_ADJ: "Sirhindi"
- ASS: "Assam"
- ASS_ADJ: "Assamese"
+ CUT: "Sadiya"
+ CUT_ADJ: "Sadiyai"
+ STN: "Bengal"
+ STN_ADJ: "Bengali"
