--- a/main_menu/localization/english/zz_1444_country_names_l_english.yml
+++ b/main_menu/localization/english/zz_1444_country_names_l_english.yml
@@ -217,6 +217,8 @@ EOA: "Eora"
 EOA_ADJ: "Eora"
 WUW: "Wurundjeri"
 WUW_ADJ: "Wurundjeri"
+WAT: "Waikato"
+WAT_ADJ: "Waikato"
 TIA: "Tahiti"
 TIA_ADJ: "Tahitian"
 PAI: "Paici"
