Minor border changes in Timurids and Dauphine, made Asturias, Moldavia & Orange principalities

--- a/main_menu/localization/english/zz_1444_country_names_l_english.yml
+++ b/main_menu/localization/english/zz_1444_country_names_l_english.yml
@@ -5,8 +5,8 @@
  TIS_ADJ: "Samarkandi"
  TTK: "Balkh"
  TTK_ADJ: "Balkhi"
- TIG: "Gurgan"
- TIG_ADJ: "Gurgani"
+ TIG: "Gorgan"
+ TIG_ADJ: "Gorgani"
  TIF: "Fars"
  TIF_ADJ: "Farsi"
  TIK: "Kandahar"
@@ -21,7 +21,7 @@
  AFG_f: "Afghanistan"
  AFG_f_desc: "Situated from our strongholds high in the Hindu Kush we have united the regional tribes under our banner. Though our lands are poor and barren, we have the will to endure and prosper."
  timurid_prince: "Timurid Prince"
- timurid_prince_desc: "Descendant of the great conqueror Tamerlane. Our right to succession is contested by our cousins, but we may still prove our right through arms"
+ timurid_prince_desc: "Descendant of the great conqueror Tamerlane. Our right to succession is contested by our cousins, but we may still prove our right through arms."
  TIX: "Timurid"
  TIX_ADJ: "Timurid"
  rank_kingdom_timurid_prince: "Timurid Sultanate"
@@ -118,3 +118,5 @@
  ZAB_ADJ: "Biskran"
  AVA: "Ava Guaraní"
  AVA_ADJ: "Ava Guaraní"
+ JMB: "Jambi"
+ JMB_ADJ: "Jambi"
