--- a/main_menu/localization/english/zz_1444_country_names_l_english.yml
+++ b/main_menu/localization/english/zz_1444_country_names_l_english.yml
@@ -230,7 +230,7 @@
  ZAB: "Biskra"
  ZAB_ADJ: "Biskran"
  australia_pops.1.title: "Australia Hotfix Event"
- australia_pops.1.desc: "Hello and welcome to Australia. Now please return to the menu and pick a real nation. Paradox has not set up this region's pops, meaning these tags are basically worthless. But if you insist on torturing yourself here are 5,000 pops so you can do anything, at least until I get around to recreating the population map. Enjoy I guess."
+ australia_pops.1.desc: "Hello and welcome to Australia. Now please return to the menu and pick a real nation. Paradox has not set up this region's pops, meaning these tags are basically worthless. But if you insist on torturing yourself here are 5,000 pops so you can do anything, at least until I get around to recreating the population map. Enjoy I guess. -Syphse"
  australia_pops.1.a: "Yes Please!"
  australia_pops.1.b: "No I love to suffer!"
 
