Added characters for France, Alencon, Canary Islands and Albania (Skanderbeg!) with some new dynasty flags. CHanged map setup in Albania for pending League of Lezhe IO

--- a/main_menu/localization/english/1444_country_names_l_english.yml
+++ b/main_menu/localization/english/1444_country_names_l_english.yml
@@ -268,5 +268,16 @@
  CUH: "Cochuah"
  CUH_ADJ: "Cochuah"
 
+ KAT: "Kastrioti"
+ KAT_ADJ: "Kastrioti"
  DGJ: "Dukagjini"
  DGJ_ADJ: "Dukagjini"
+
+ GUI: "Guria"
+ GUI_ADJ: "Guria"
+ ODI: "Odishi"
+ ODI_ADJ: "Odishi"
+ SVT: "Svaneti"
+ SVT_ADJ: "Svaneti"
+ TIN: "Didoeti"
+ TIN_ADJ: "Didoeti"
