--- a/main_menu/localization/english/1444_dynasty_names_l_english.yml
+++ b/main_menu/localization/english/1444_dynasty_names_l_english.yml
@@ -1,2 +1,21 @@
-﻿l_english: 
+﻿l_english:
+
+ # Persia
+ timurid_dynasty: "Gūrkānī"
+
+ # Korea
  yi_dynasty: "Yi"
+
+
+ # France
+ valois_anjou_dynasty: "Valois-Anjou"
+ valois_orleans_dynasty: "Valois-Orléans"
+ valois_alencon_dynasty: "Valois-Alençon"
+ montfort_brittany_dynasty: "Montfort-Bretagne"
+ coeur_dynasty: "Cœur"
+ chabannes_dynasty: "Chabannes"
+
+ bethencourt_dynasty: "Béthencourt"
+
+ # Balkans
+ dukagjini_dynasty: "Dukagjini"
