New world map (#26)
Changed borders in New World, added some characters to FRA, ALE, KAT & CNY.

--- a/main_menu/localization/english/1444_country_names_l_english.yml
+++ b/main_menu/localization/english/1444_country_names_l_english.yml
@@ -244,3 +244,40 @@
  GOT_ADJ: "Gotland"
  CNY: "Canary Islands"
  CNY_ADJ: "Canary Islanders"
+
+ CPH: "Can Pech"
+ CPH_ADJ: "Can Pech"
+ CUP: "Cupul"
+ CUP_ADJ: "Cupul"
+ EKB: "Ekab"
+ EKB_ADJ: "Ekab"
+ HOC: "Hocaba"
+ HOC_ADJ: "Hocaba"
+ CKN: "Chakan"
+ CKN_ADJ: "Chakan"
+ CEH: "Ceh Pech"
+ CEH_ADJ: "Ceh Pech"
+ AKC: "Ah Kin Chel"
+ AKC_ADJ: "Ah Kin Chel"
+ STA: "Sotuta"
+ STA_ADJ: "Sotuta"
+ TSS: "Tazes"
+ TSS_ADJ: "Tazes"
+ CMU: "Calotmul"
+ CMU_ADJ: "Calotmul"
+ CUH: "Cochuah"
+ CUH_ADJ: "Cochuah"
+
+ KAT: "Kastrioti"
+ KAT_ADJ: "Kastrioti"
+ DGJ: "Dukagjini"
+ DGJ_ADJ: "Dukagjini"
+
+ GUI: "Guria"
+ GUI_ADJ: "Guria"
+ ODI: "Odishi"
+ ODI_ADJ: "Odishi"
+ SVT: "Svaneti"
+ SVT_ADJ: "Svaneti"
+ TIN: "Didoeti"
+ TIN_ADJ: "Didoeti"
