--- a/main_menu/localization/english/zz_1444_country_names_l_english.yml
+++ b/main_menu/localization/english/zz_1444_country_names_l_english.yml
@@ -15,7 +15,6 @@
  TII_ADJ: "Ajami"
  HZP: "Lorestan"
  HZP_ADJ: "Lorestani"
- timurid_dynasty: "Timurid"
  AFG: "Afghanistan"
  AFG_ADJ: "Afghani"
  AFG_f: "Afghanistan"
@@ -233,6 +232,9 @@
  JMB: "Jambi"
  JMB_ADJ: "Jambi"
 
+ HEL: "Chikenchel"
+ HEL_ADJ: "Chikenchel"
+ 
  #Mongol Rework
  unified_chagatai: "Chagatai"
  unified_chagatai_ADJ: "Chagatai"
