Changed some file names for better structure, changed Ming & others from being able to fully see Europe

--- a/main_menu/localization/english/1444_character_names_l_english.yml
+++ b/main_menu/localization/english/1444_character_names_l_english.yml
@@ -1,4 +1,15 @@
 ﻿l_english:
+ #Timurid/Turkic Names
+ name_timur: "Timur"
+ name_shahrukh: "Shah Rukh"
+ name_ulugh: "Ulugh Beg"
+ name_babur: "Babur"
+ name_husayn: "Husayn"
+ name_ibrahim: "Ibrahim"
+ name_gawhar: "Gawhar"
+ name_sultan: "Sultan"
+
+ #Korean Names
  name_seong_gye: "Seong-gye"
  name_bang_gwa: "Bang-gwa"
  name_bang_won: "Bang-Won"
