--- a/main_menu/localization/english/1444_country_names_l_english.yml
+++ b/main_menu/localization/english/1444_country_names_l_english.yml
@@ -218,8 +218,8 @@
  TOI_ADJ: "Tournai"
  ASU: "Asturias"
  ASU_ADJ: "Asturias"
- MJE: "Majeerteen"
- MJE_ADJ: "Majeerteen"
+ MJE: "Majerteen"
+ MJE_ADJ: "Majerteen"
  MSA: "Massina"
  MSA_ADJ: "Massina"
  DJN: "D'Jenné"
