--- a/main_menu/localization/english/1444_country_names_l_english.yml
+++ b/main_menu/localization/english/1444_country_names_l_english.yml
@@ -354,3 +354,138 @@
  HT2: "Noto Hatakeyama"
  HT2_ADJ: "Noto Hatakeyama"
  HT2_LONG: "Noto Hatakeyama"
+ AMK: "Amakusa"
+ AMK_ADJ: "Amakusa"
+ NWA: "Nawa"
+ NWA_ADJ: "Nawa"
+ KOG: "Kanokogi"
+ KOG_ADJ: "Kanokogi"
+ SHD: "Shodai"
+ SHD_ADJ: "Shodai"
+ MOC: "Shodai"
+ MOC_ADJ: "Shodai"
+ OKU: "Okura"
+ OKU_ADJ: "Okura"
+ SGA: "Shiga"
+ SGA_ADJ: "Shiga"
+ TTU: "Totsugi"
+ TTU_ADJ: "Totsugi"
+ TAW: "Tawara"
+ TAW_ADJ: "Tawara"
+ USU: "Usa Jingū"
+ USU_ADJ: "Usa Jingū"
+ UT1: "Buzen Utsunomiya"
+ UT1_ADJ: "Buzen Utsunomiya"
+ UT2: "Iyo Utsunomiya"
+ UT2_ADJ: "Iyo Utsunomiya"
+ TCB: "Tachibana"
+ TCB_ADJ: "Tachibana"
+ OMR: "Omura"
+ OMR_ADJ: "Omura"
+ MOT: "Motoyama"
+ MOT_ADJ: "Motoyama"
+ UED: "Ueda"
+ UED_ADJ: "Ueda"
+ AZA: "Akazawa"
+ AZA_ADJ: "Akazawa"
+ SUZ: "Suzuki"
+ SUZ_ADJ: "Suzuki"
+ SUG: "Suganuma"
+ SUG_ADJ: "Suganuma"
+ ANO: "Amano"
+ ANO_ADJ: "Amano"
+ MII: "Miki"
+ MII_ADJ: "Miki"
+ IBI: "Ibi"
+ IBI_ADJ: "Ibi"
+ SIO: "Saito"
+ SIO_ADJ: "Ibi"
+ AAN: "Asano"
+ AAN_ADJ: "Asano"
+ KIS: "Kiso"
+ KIS_ADJ: "Kiso"
+ CKU: "Chiku"
+ CKU_ADJ: "Chiku"
+
+ LDK: "Ladakh"
+ LDK_ADJ: "Ladakhi"
+ PHA: "Phagmodrupa"
+ PHA_ADJ: "Phagmodrupa"
+ BOM: "Bome"
+ BOM_ADJ: "Bome"
+ CGP: "Chigungpa"
+ CGP_ADJ: "Chigungpa"
+ SDY: "Sadiya"
+ SDY_ADJ: "Sadiya"
+ SJP: "Sahjonbu"
+ SJP_ADJ: "Sahjonbu"
+ KHW: "Khakaw"
+ KHW_ADJ: "Khakaw"
+ SYA: "Sakya"
+ SYA_ADJ: "Sakya"
+ LHU: "Lhadlu"
+ LHU_ADJ: "Lhadlu"
+ GHO: "Ghontanpa"
+ GHO_ADJ: "Ghontanpa"
+ KHP: "Kham"
+ KHP_ADJ: "Kham"
+ RIN: "Rinpungpa"
+ RIN_ADJ: "Rinpungpa"
+ GUA: "Guanjue"
+ GUA_ADJ: "Guanjue"
+ DGA: "Doganda"
+ DGA_ADJ: "Doganda"
+ CKA: "Chakla"
+ CKA_ADJ: "Chakla"
+ SFN: "Suifun"
+ SFN_ADJ: "Suifun"
+ UYG: "Uyghuristan"
+ UYG_ADJ: "Uyghur"
+ BAL: "Balochistan"
+ BAL_ADJ: "Baloch"
+ RAS: "Rassids"
+ RAS_ADJ: "Rassids"
+ TAH: "Tahirids"
+ TAH_ADJ: "Tahirids"
+ KTH: "Kathiri"
+ KTH_ADJ: "Kathiri"
+ OUJ: "Oujda"
+ OUJ_ADJ: "Oujda"
+ PAT: "Pattani"
+ PAT_ADJ: "Pattani"
+ PGG: "Pagaruyung"
+ PGG_ADJ: "Pagaruyung"
+ GAH: "Galuh"
+ GAH_ADJ: "Galuh"
+ LOM: "Lombok"
+ LOM_ADJ: "Lombok"
+ TOI: "Tournai"
+ TOI_ADJ: "Tournai"
+ ASU: "Asturias"
+ ASU_ADJ: "Asturias"
+ MJE: "Majeerteen"
+ MJE_ADJ: "Majeerteen"
+ MSA: "Massina"
+ MSA_ADJ: "Massina"
+ DJN: "D'Jenné"
+ DJN_ADJ: "D'Jenné"
+ AIR: "Kel Aïr"
+ AIR_ADJ: "Kel Aïr"
+ BIP: "Biapas"
+ BIP_ADJ: "Biapas"
+ LOA: "Loango"
+ LOA_ADJ: "Loango"
+ NGY: "Ngoyo"
+ NGY_ADJ: "Ngoyo"
+ KKO: "Kakongo"
+ KKO_ADJ: "Kakongo"
+ NDO: "Ndongo"
+ NDO_ADJ: "Ndongo"
+ MUP: "Mutapa"
+ MUP_ADJ: "Mutapa"
+ VYB: "Vyborg"
+ VYB_ADJ: "Vyborg"
+ GOT: "Gotland"
+ GOT_ADJ: "Gotland"
+ CNY: "Canary Islands"
+ CNY_ADJ: "Canary Islanders"
