--- a/main_menu/localization/english/1444_country_names_l_english.yml
+++ b/main_menu/localization/english/1444_country_names_l_english.yml
@@ -268,6 +268,11 @@
  CUH: "Cochuah"
  CUH_ADJ: "Cochuah"
 
+ SZE: "Székelyland"
+ SZE_ADJ: "Székely"
+ SBN: "Siebenbürgen"
+ SBN_ADJ: "Siebenbürger"
+
  KAT: "Kastrioti"
  KAT_ADJ: "Kastrioti"
  DGJ: "Dukagjini"
