Greenland is kill :sad: - Charolais, Macon, Zeta added, Travunja renamed to Hum, border changes in Bosnia, Abbey of Condat returns

--- a/main_menu/localization/english/1444_country_names_l_english.yml
+++ b/main_menu/localization/english/1444_country_names_l_english.yml
@@ -268,10 +268,17 @@
  CUH: "Cochuah"
  CUH_ADJ: "Cochuah"
 
+ CAL: "Charolais"
+ CAL_ADJ: "Charolais"
+ MCO: "Mâcon"
+ MCO_ADJ: "Mâcon"
+
  SZE: "Székelyland"
  SZE_ADJ: "Székely"
  SBN: "Siebenbürgen"
  SBN_ADJ: "Siebenbürger"
+
+ ZET: "Zeta"
 
  KAT: "Kastrioti"
  KAT_ADJ: "Kastrioti"
