--- a/main_menu/localization/english/zz_1444_country_names_l_english.yml
+++ b/main_menu/localization/english/zz_1444_country_names_l_english.yml
@@ -27,8 +27,12 @@
  rank_duchy_timurid_prince: "Timurid Emirate"
  rank_empire_timurid_prince: "Timurid Empire"
 
+ SCL: "Condat"
+ SCL_ADJ: "Condat"
  ACH: "Morea"
  ACH_ADJ: "Morean"
+ TRO: "Hum"
+ TRO_ADJ: "Hum"
  NSL: "Odoyev"
  NSL_ADJ: "Odoyevian"
  CZK: "Masovia"
