Basic skeleton for cadet branch IOs

--- a/main_menu/localization/english/1444_dynasty_names_l_english.yml
+++ b/main_menu/localization/english/1444_dynasty_names_l_english.yml
@@ -1,10 +1,15 @@
-﻿l_english:
+l_english:
 
  # Persia
  timurid_dynasty: "Gūrkānī"
 
  # Korea
  yi_dynasty: "Yi"
+
+ # Japan
+
+ nagao_dynasty: "Nagao"
+ hojo_dynasty: "Hōjō"
 
  # Russia
 
