--- a/main_menu/localization/english/1444_international_organisations_l_english.yml
+++ b/main_menu/localization/english/1444_international_organisations_l_english.yml
@@ -14,3 +14,7 @@
  cadet_branch: "Cadet Branch"
  cadet_branch_plural: "Cadet Branches"
  cadet_branch_desc: "A cadet branch represents a lineage descended from the main line of the [GetInternationalOrganizationType('japanese_clan').GetName]. While subordinate in status, a $cadet_branch$ may rise to prominence should it surpass the main line in authority and strength."
+ new_cadet_branch.tt: "We become the leader of the clan and establish a new $cadet_branch$."
+
+ jap_branching_clan: "REPLACE_ME"
+ jap_branching_clan_desc: "REPLACE_ME"
