--- a/main_menu/localization/english/zz_1444_country_names_l_english.yml
+++ b/main_menu/localization/english/zz_1444_country_names_l_english.yml
@@ -321,5 +321,5 @@
  rank_kingdom_horde: "Khanate"
  rank_kingdom_horde_2: "Horde"
  rank_kingdom_horde_2: "Horde"
- uriankhai_clan: "Uriankhai"
+ uriankhai_clan: "$NAME$ Uriankhai"
  horde_clan: "Clan"
