--- a/main_menu/localization/english/1444_country_names_l_english.yml
+++ b/main_menu/localization/english/1444_country_names_l_english.yml
@@ -18,7 +18,7 @@
  JAG: "Jagoldai"
  JAG_ADJ: "Jagoldai"
  KZN: "Kazan"
- KZN_ADJ: "Kazani"
+ KZN_ADJ: "Kazan"
  SBR: "Sibir"
  SBR_ADJ: "Sibir"
  AQQ: "Aq Qoyunlu"
