--- a/main_menu/localization/english/zz_1444_country_names_l_english.yml
+++ b/main_menu/localization/english/zz_1444_country_names_l_english.yml
@@ -300,13 +300,13 @@
  FUY: "Fuyu"
  FUY_ADJ: "Fuyu"
  #Uriankhai
- KUH: "Khentii"
+ KUH: "Khentii Uriankhai"
  KUH_ADJ: "Khentii"
- KVU: "Khövsgöl"
+ KVU: "Khövsgöl Uriankhai"
  KVU_ADJ: "Khövsgöl"
- TBU: "Transbaikal"
+ TBU: "Transbaikal Uriankhai"
  TBU_ADJ: "Transbaikal"
- AUK: "Altai"
+ AUK: "Altai Uriankhai"
  AUK_ADJ: "Altai"
  #Others
  YKZ: "Yenisei Kirghiz"
@@ -321,5 +321,4 @@
  rank_kingdom_horde: "Khanate"
  rank_kingdom_horde_2: "Horde"
  rank_kingdom_horde_2: "Horde"
- uriankhai_clan: "$NAME$ Uriankhai"
  horde_clan: "Clan"
