Added characters to the Mamluks, Provence, Anjou. Naples ruler history completed. Starting Turkish-Byzantine truce.

--- a/main_menu/localization/english/1444_dynasty_names_l_english.yml
+++ b/main_menu/localization/english/1444_dynasty_names_l_english.yml
@@ -6,8 +6,9 @@
  # Korea
  yi_dynasty: "Yi"
 
+ # Russia
+
  # British Isles
- livingstone_dynasty: "Livingstone"
 
  # France
  valois_anjou_dynasty: "Valois-Anjou"
@@ -16,8 +17,15 @@
  montfort_brittany_dynasty: "Montfort-Bretagne"
  coeur_dynasty: "Cœur"
  chabannes_dynasty: "Chabannes"
+ lorraine_dynasty: "Lorraine"
 
  bethencourt_dynasty: "Béthencourt"
 
+ # Italy
+ caracciolo_dynasty: "caracciolo"
+
  # Balkans
  dukagjini_dynasty: "Dukagjini"
+
+ # Middle East
+ burji_dynasty: "Burjiya"
