--- a/main_menu/localization/english/1444_dynasty_names_l_english.yml
+++ b/main_menu/localization/english/1444_dynasty_names_l_english.yml
@@ -8,7 +8,16 @@
 
  # Russia
 
- # British Isles
+ # Sweden
+ bonde_dynasty: "Bonde"
+ sture_dynasty: "Sture"
+ vasa_dynasty: "Vasa"
+ trolle_dynasty: "Trolle"
+ bielke_dynasty: "Bielke"
+ sparre_dynasty: "Sparre"
+ stenbock_dynasty: "Stenbock"
+
+ # England
 
  # France
  valois_anjou_dynasty: "Valois-Anjou"
