--- a/main_menu/localization/english/zz_1444_country_names_l_english.yml
+++ b/main_menu/localization/english/zz_1444_country_names_l_english.yml
@@ -322,3 +322,5 @@
  rank_kingdom_horde_2: "Horde"
  rank_kingdom_horde_2: "Horde"
  horde_clan: "Clan"
+ legacy_of_khasar: "Legacy of Khasar"
+ legacy_of_khasar_desc: "We can trace our ancestory back as far as the legendary Khasar, or Hasar, brother of Genghis Khan himself"
