--- a/main_menu/localization/english/zz_1444_country_names_l_english.yml
+++ b/main_menu/localization/english/zz_1444_country_names_l_english.yml
@@ -281,8 +281,6 @@
  JAR_ADJ: "Jarud"
  BAY: "Bayaut"
  BAY_ADJ: "Bayaut"
- OJY: "Öjiyed"
- OJY_ADJ: "Öjiyed"
  #Khorchin
  HAS: "Hasarids"
  HAS_ADJ: "Hasarids"
@@ -324,3 +322,5 @@
  horde_clan: "Clan"
  legacy_of_khasar: "Legacy of Khasar"
  legacy_of_khasar_desc: "We can trace our ancestory back as far as the legendary Khasar, or Hasar, brother of Genghis Khan himself"
+ mongol_khagan: "Mongol Khagan"
+ mongol_khagan_desc: "We are the descendants of Genghis Khan, the great unifier of the steppe."
