--- a/main_menu/localization/english/1444_mongol_rework_l_english.yml
+++ b/main_menu/localization/english/1444_mongol_rework_l_english.yml
@@ -105,10 +105,10 @@
  yizhou_jurchen.mongolian_language: "Iju"
  wangping.mongolian_language: "Wangbing"
  kaicheng.mongolian_language: "Khayiching"
- zhengjiatun.mongolian_language: "Jengjiatun"
+ zhengjiatun.mongolian_language: "Sira Muren"
  wafang.mongolian_language: "Wafang"
- nongan.mongolian_language: "Nongan"
- guangning.mongolian_language: "Guangning"
+ nongan.mongolian_language: "Khar Khot"
+ guangning.mongolian_language: "Liau-yang"
  daning_pingquan.mongolian_language: "Daning"
  xingzhong.mongolian_language: "Shingju"
  lizhou.mongolian_language: "Liju"
@@ -120,9 +120,9 @@
  xuanning.mongolian_language: "Shuanning"
  jining.mongolian_language: "Jining"
  weining.mongolian_language: "Weining"
- tongwancheng.mongolian_language: "Tsagaan Khot"
+ tongwancheng.mongolian_language: "Tsagaan Baishin"
  dunla.mongolian_language: "Dunla"
- gonganbao.mongolian_language: "Gongan-bu"
+ gonganbao.mongolian_language: "Gongan-khote"
  manas.mongolian_language: "Manas"
  yuanhu.mongolian_language: "Yuan-khu"
  taitao.mongolian_language: "Taidao"
@@ -134,12 +134,34 @@
  kuile.mongolian_language: "Kuile"
  nuomin.mongolian_language: "Noming"
  gan.mongolian_language: "Gan"
- kailu.mongolian_language: "Kailu"
+ kailu.mongolian_language: "Ulhui"
  chaghankhot.mongolian_language: "Tsagaan Khot"
  yizhou_jinzhou.mongolian_language: "Iju"
+ dongliangting.mongolian_language: "Dongliang-ting"
+ guangning.mongolian_language: "Guangning"
+ xiabancheng.mongolian_language: "Dochung"
+ hezhong.mongolian_language: "Khidshung"
+ wuping_daning.mongolian_language: "Ubing-Daning"
+ liuyuan.mongolian_language: "Liuyuan"
+ taipingzhuang.mongolian_language: "Taibing"
+ zhangsanying.mongolian_language: "Kereyid"
+ pingquan.mongolian_language: "Kara-muren"
+ weining.mongolian_language: "Weining"
+ liangcheng.mongolian_language: "Liangching"
+ zhenwu.mongolian_language: "Jen-wu"
+ ningbian.mongolian_language: "Ning-biyan"
+ yinshan.mongolian_language: "Inshan"
+ urad.mongolian_language: "Urad"
+ tongliao.mongolian_language: "Baarin-u Nutag"
+ toli.mongolian_language: "Emil"
+ uliastai.mongolian_language: "Zavkhan"
+ ulaangom.mongolian_language: "Kharkhiraa"
+ kyakhta.mongolian_language: "Selenge"
+ ulanhua.mongolian_language: "Muumyangan"
+ erzin.mongolian_language: "Tes"
 
 #Russian
- minusinsk.mongolian_language: "Minusu"
+ minusinsk.mongolian_language: "Kem-Kemchik"
  shushenskoye.mongolian_language: "Shushen"
  abakasnk.mongolian_language: "Abakan"
  idrinskoye.mongolian_language: "Idre"
@@ -173,8 +195,10 @@
  uraqai.mongolian_language: "Wurakhai"
 
 # Manchu
- qiqihar.mongolian_language: "Chichigar"
+ qiqihar.mongolian_language: "Naun Khot"
  hurle.mongolian_language: "Khuree"
  taizhou_jurchen.mongolian_language: "Taiju"
  boduna.mongolian_language: "Bedune"
  qorqonaq_yubur.mongolian_language: "Korkonagh"
+ bodonch.mongolian_language: "Bodonchi"
+ guchung.mongolian_language: "Guching"
