--- a/main_menu/localization/english/1444_mongol_rework_l_english.yml
+++ b/main_menu/localization/english/1444_mongol_rework_l_english.yml
@@ -1,5 +1,32 @@
 ﻿l_english:
 #Random pockets
+ legacy_of_khasar: "Legacy of Khasar Khan"
+ legacy_of_khasar_desc: "We can trace our ancestory back as far as the legendary Khasar, or Hasar, brother of Genghis Khan himself"
+ mongol_khagan: "Mongol Khagan"
+ mongol_khagan_desc: "We are the descendants of Genghis Khan, the great unifier of the steppe."
+ imp_not_khaganate: ""
+ seal_of_yuan: "Seal of Great Yuan"
+ seal_of_yuan_desc: "The imperial seal used by the emperors of the Yuan Dynasty. A symbol of absolute sovereignty and the unification of the Mongol and Chinese empires."
+
+#Dynamic Names
+ rank_empire_horde: "Khaganate"
+ rank_kingdom_horde: "Khanate"
+ rank_kingdom_horde_2: "Horde"
+ horde_clan: "Clan"
+ character_title_khatun: "Khatun"
+ character_title_chingsang: "Chingsang"
+ character_title_taishi: "Taishi"
+ character_title_khagan: "Khagan"
+ character_title_khan: "Khan"
+ character_title_noyan: "Noyan"
+
+#Culture
+ khorchin_culture: "Khorchin"
+ uriankhai_culture: "Uriankhai"
+ kazakh_culture: "Kazakh"
+ khalkha_culture: "Khalkha"
+
+#Dynasties
  khasar_dynasty: "Khasar"
  chagatayid_dynasty: "Chagataid"
  uriangkhad_dynasty: "Uriangkhad"
@@ -12,23 +39,10 @@
  yenisei_dynasty: "Yenisei"
  soyot_dynasty: "Soyot"
  dughlat_dynasty: "Dughlat"
+
+#Formables
  CHG_f: "Chagatai"
  CHG_f_desc: "We have triumphed! As the sole remaining claimmant to the seat of Chagatai we can claim his mantle as our own. Let us do so in haste."
- khorchin_culture: "Khorchin"
- uriankhai_culture: "Uriankhai"
- kazakh_culture: "Kazakh"
- khalkha_culture: "Khalkha"
- rank_empire_horde: "Khaganate"
- rank_kingdom_horde: "Khanate"
- rank_kingdom_horde_2: "Horde"
- horde_clan: "Clan"
- legacy_of_khasar: "Legacy of Khasar Khan"
- legacy_of_khasar_desc: "We can trace our ancestory back as far as the legendary Khasar, or Hasar, brother of Genghis Khan himself"
- mongol_khagan: "Mongol Khagan"
- mongol_khagan_desc: "We are the descendants of Genghis Khan, the great unifier of the steppe."
- imp_not_khaganate: ""
-
- #Formables
  unified_chagatai: "Chagatai"
  unified_chagatai_ADJ: "Chagatai"
  KHL: "Khalkha"
@@ -67,7 +81,6 @@
  MGA_f: "Mongolia"
  MGA_f_desc: "The Mongol tribes are united. Together we will face the future, whatever comes."
  MGA_f_tt: "This tag is only available via the Mongolia reforms in the Yuan organization."
-
 
 #Oirat
  KHO: "Khoshut"
