--- a/main_menu/localization/english/1444_mongol_rework_l_english.yml
+++ b/main_menu/localization/english/1444_mongol_rework_l_english.yml
@@ -4,7 +4,6 @@
  legacy_of_khasar_desc: "We can trace our ancestory back as far as the legendary Khasar, or Hasar, brother of Genghis Khan himself"
  mongol_khagan: "Mongol Khagan"
  mongol_khagan_desc: "We are the descendants of Genghis Khan, the great unifier of the steppe."
- imp_not_khaganate: ""
  seal_of_yuan: "Seal of Great Yuan"
  seal_of_yuan_desc: "The imperial seal used by the emperors of the Yuan Dynasty. A symbol of absolute sovereignty and the unification of the Mongol and Chinese empires."
 
@@ -18,8 +17,22 @@
  rank_kingdom_horde_2_ruler_suffix_female: "Khātūn"
  horde_clan: "Clan"
  horde_clan_ruler_suffix_male: "Noyan"
- horde_clan_ruler_suffix_female: "Begum"
+ horde_clan_ruler_suffix_female: "Noyan"
 
+ rank_kingdom_horde_taishi: "Taishi"
+ rank_empire_horde_taishi: "Taishi"
+ rank_kingdom_horde_taishi_female: "Taishi"
+ rank_empire_horde_taishi_female: "Taishi"
+ horde_clan_taishi: "Taishi"
+ horde_clan_taishi_female: "Taishi"
+
+ imp_not_khaganate: ""
+ imp_not_khaganate_ruler_suffix_male: "Khāghān"
+ imp_not_khaganate_ruler_suffix_female: "Khātūn"
+
+ uriankhai_tumen: "Tumen"
+ uriankhai_tumen_ruler_suffix_male: "Khāghān"
+ uriankhai_tumen_ruler_suffix_female: "Khātūn"
 # character_title_chingsang: "Chingsang"
 # character_title_taishi: "Taishi"
 
@@ -70,7 +83,6 @@
  URZ_f: "Uriankhai"
  URZ_f_desc: "At last we have united the wild boundary between steppe and taiga."
  URZ_f_tt: "This tag is only avaliable via The Seventh Tumen event."
- uriankhai_tumen: "Tumen"
  YUA: "Yuan"
  YUA_ADJ: "Yuan"
  YUA_f: "Yuan"
