--- a/main_menu/localization/english/1444_mongol_rework_l_english.yml
+++ b/main_menu/localization/english/1444_mongol_rework_l_english.yml
@@ -19,12 +19,9 @@
  horde_clan_ruler_suffix_male: "Noyan"
  horde_clan_ruler_suffix_female: "Noyan"
 
- rank_kingdom_horde_taishi: "Taishi"
- rank_empire_horde_taishi: "Taishi"
- rank_kingdom_horde_taishi_female: "Taishi"
- rank_empire_horde_taishi_female: "Taishi"
- horde_clan_taishi: "Taishi"
- horde_clan_taishi_female: "Taishi"
+ horde_clan_taishi: "Clan"
+ horde_clan_taishi_ruler_suffix_male: "Taishi"
+ horde_clan_taishi_ruler_suffix_female: "Taishi"
 
  imp_not_khaganate: ""
  imp_not_khaganate_ruler_suffix_male: "Khāghān"
@@ -33,8 +30,6 @@
  uriankhai_tumen: "Tumen"
  uriankhai_tumen_ruler_suffix_male: "Khāghān"
  uriankhai_tumen_ruler_suffix_female: "Khātūn"
-# character_title_chingsang: "Chingsang"
-# character_title_taishi: "Taishi"
 
 #Culture
  khorchin_culture: "Khorchin"
