--- a/main_menu/localization/english/1444_mongol_rework_l_english.yml
+++ b/main_menu/localization/english/1444_mongol_rework_l_english.yml
@@ -120,9 +120,9 @@
  JAR_ADJ: "Jarud"
  BAY: "Bayaut"
  BAY_ADJ: "Bayaut"
-#Khorchin
- HAS: "Hasarids"
- HAS_ADJ: "Hasarids"
+#Khorchinwq
+ HAS: "Hasarid"
+ HAS_ADJ: "Hasarid"
  JAI: "Jalaid"
  JAI_ADJ: "Jalaid"
  KDB: "Dörbed"
@@ -264,3 +264,5 @@
  qorqonaq_yubur.mongolian_language: "Korkonagh"
  bodonch.mongolian_language: "Bodonchi"
  guchung.mongolian_language: "Guching"
+
+ dadu.chinese_language: "Beijing"
