Added the Colonna to PAP

--- a/main_menu/localization/english/1444_dynasty_names_l_english.yml
+++ b/main_menu/localization/english/1444_dynasty_names_l_english.yml
@@ -33,6 +33,7 @@
  # Italy
  sforza_dynasty: "Sforza"
  farnese_dynasty: "Farnese"
+ colonna_dynasty: "Colonna"
  caracciolo_dynasty: "Caracciolo"
 
  # Balkans
