Ouchi, Takeda, Hosokawa, Ashikaga, Yamana done

--- a/main_menu/localization/english/1444_character_names_l_english.yml
+++ b/main_menu/localization/english/1444_character_names_l_english.yml
@@ -39,7 +39,18 @@
 
 # Clan names
  name_sozen: "Sōzen"
+ name_mochitoyo: "Mochitoyo"
+ name_tokiyoshi: "Tokiyoshi"
  name_katsumoto: "Katsumoto"
+ name_mochiyuki: "Mochiyuki"
+ name_mochiyo: "Mochiyo"
+ name_mitsumoto: "Mitsumoto"
+ name_tokiyoshi: "Tokiyoshi"
+ name_mochimori: "Mochimori"
+ name_nobumori: "Nobumori"
+ name_nobukata: "Nobukata"
+ name_nobushige: "Nobushige"
+ name_nobuari: "Nobuari"
 
  #Japanese Imperial Regnal Names
  name_sukou: "Sukō" #崇光
