Added Dai Viet characters

--- a/main_menu/localization/english/1444_character_names_l_english.yml
+++ b/main_menu/localization/english/1444_character_names_l_english.yml
@@ -98,3 +98,18 @@
  name_shamsuddin: "Shamsuddin"
  name_firoz: "Taj-ud-Din Firoz"
  name_humayun: "Humayun"
+
+ #Dai Viet
+ Bang_Co: "Băng Cơ"
+ Thi_Anh: "Thị Anh"
+ Nguyen_viet: "Nguyễn"
+ Kha: "Khả"
+ Trinh: "Trịnh"
+ Nguyen_Long: "Nguyên Long"
+ Nghi_Dan: "Nghi Dân"
+ Tu_Thanh: "Tư Thành"
+ Thi_Ngoc_Dao: "Thị Ngọc Dao"
+ Ngo_viet: "Ngô"
+ Loi: "Lợi"
+ Thi_Bi: "Thị Bí"
+ Duong_viet: "Dương"
