Added Champa Lan na and Ayutthaya

--- a/main_menu/localization/english/1444_character_names_l_english.yml
+++ b/main_menu/localization/english/1444_character_names_l_english.yml
@@ -99,6 +99,23 @@
  name_firoz: "Taj-ud-Din Firoz"
  name_humayun: "Humayun"
 
+ #Ayutthaya
+ name_intharachathirat: "Intharachathirat"
+ name_thong_lan: "Thong Lan"
+ name_ramesuan: "Ramesuan"
+ name_ramrachathirat: "Ramrachathirat"
+ name_borommatrailokkanat: "Borommatrailokkanat"
+
+ #Lan Na
+ name_kue_na: "Kue Na"
+ name_saenmueangma: "Saenmueangma"
+ name_samfangkaen: "Samfangkaen"
+ name_tilokaraj: "Tilokaraj"
+
+ #Champa
+ Po_Binasuor: "Po Binasuor"
+ Maha_Vijaya: "Maha Vijaya"
+
  #Dai Viet
  Bang_Co: "Băng Cơ"
  Thi_Anh: "Thị Anh"
