Added Khmer and Lan Xang

--- a/main_menu/localization/english/1444_character_names_l_english.yml
+++ b/main_menu/localization/english/1444_character_names_l_english.yml
@@ -99,24 +99,33 @@
  name_firoz: "Taj-ud-Din Firoz"
  name_humayun: "Humayun"
 
- #Ayutthaya
+ # Ayutthaya
  name_intharachathirat: "Intharachathirat"
  name_thong_lan: "Thong Lan"
  name_ramesuan: "Ramesuan"
  name_ramrachathirat: "Ramrachathirat"
  name_borommatrailokkanat: "Borommatrailokkanat"
 
- #Lan Na
+ # Lan Na
  name_kue_na: "Kue Na"
  name_saenmueangma: "Saenmueangma"
  name_samfangkaen: "Samfangkaen"
  name_tilokaraj: "Tilokaraj"
 
- #Champa
+ # Khmer
+ Lompong_Reachea: "Lompong Reachea"
+ Borom_Nipeanbot: "Borom Nipeanbot"
+ Soriyoavong: "Soriyoavong"
+ Soriyotei: "Soriyoteï"
+ Damkhat: "Damkhat"
+ Kaeo_Fa: "Kaeo Fa"
+ Ponhea_Yat: "Ponhea Yat"
+
+ # Champa
  Po_Binasuor: "Po Binasuor"
  Maha_Vijaya: "Maha Vijaya"
 
- #Dai Viet
+ # Dai Viet
  Bang_Co: "Băng Cơ"
  Thi_Anh: "Thị Anh"
  Nguyen_viet: "Nguyễn"
@@ -130,3 +139,19 @@
  Loi: "Lợi"
  Thi_Bi: "Thị Bí"
  Duong_viet: "Dương"
+
+ # Lan Xang
+ Panya_Khamphong: "Panya Khamphong"
+ Phi_Fa: "Phi Fa"
+ Fa_Ngum: "Fa Ngum"
+ Samsenethai: "Samsenethai"
+ Lan_Kham_Deng: "Lan Kham Deng"
+ Phommathat: "Phommathat"
+ Yukhon: "Yukhon"
+ Khon_Kham: "Khon Kham"
+ Kham_Tam_Sa: "Kham Tam Sa"
+ Lusai: "Lusai"
+ Khai_Bua_Ban: "Khai Bua Ban"
+ Kham_Keut: "Kham Keut"
+ Nang_Keo_Phimpha: "Nang Keo Phimpha"
+ Chakkaphat_Phaen_Phaeo: "Chakkaphat Phaen Phaeo"
