--- a/main_menu/localization/english/1444_character_names_l_english.yml
+++ b/main_menu/localization/english/1444_character_names_l_english.yml
@@ -120,6 +120,7 @@
  Damkhat: "Damkhat"
  Kaeo_Fa: "Kaeo Fa"
  Ponhea_Yat: "Ponhea Yat"
+ Noreay_Reachea: "Noreay Reachea"
 
  # Champa
  Po_Binasuor: "Po Binasuor"
@@ -155,6 +156,7 @@
  Kham_Keut: "Kham Keut"
  Nang_Keo_Phimpha: "Nang Keo Phimpha"
  Chakkaphat_Phaen_Phaeo: "Chakkaphat Phaen Phaeo"
+ Maha_Devi: "Maha Devi"
  
  # Pegu/Hanthawaddy
  Razadarit: "Razadarit"
@@ -166,3 +168,21 @@
  Binnya_Kyan: "Binnya Kyan"
  Leik_Munhtaw: "Leik Munhtaw"
  Soe_Min_Wimala_Dewi: "Soe Min Wimala Dewi"
+
+ # Ava
+ Thado_Minbya: "Thado Minbya"
+ Minkhaung: "Minkhaung"
+ Min_Hla: "Min Hla"
+ Kale_Kyetaungnyo: "Kale Kyetaungnyo"
+ Min_Pale: "Min Pale"
+ Shwe_Einthe: "Shwe Einthe"
+ Saw_Diga: "Saw Diga"
+ Thado: "Thado"
+ Minye_Kyawswa: "Minye Kyawswa"
+ Narapati: "Narapati"
+ Thihathura: "Thihathura" 
+ Atula_Thiri_Maha_Yaza_Dewi: "Atula Thiri Maha Yaza Dewi"
+
+ # Prome
+ Saw_Shwe_Khet: "Saw Shwe Khet"
+ Thinkaya: "Thinkaya"
