Touched up South-East Asia

--- a/main_menu/localization/english/1444_country_names_l_english.yml
+++ b/main_menu/localization/english/1444_country_names_l_english.yml
@@ -45,6 +45,10 @@
  AVV_ADJ: "Ava"
  ARK: "Mrauk U"
  ARK_ADJ: "Arakanese"
+ MPH: "Muang Phuan"
+ MPH_ADJ: "Muang Phuan"
+ MGP: "Möng Pai"
+ MGP_ADJ: "Möng Pai"
  HUI: "Hui"
  HUI_ADJ: "Hui"
 # New Daimyos
