--- a/main_menu/localization/english/1444_dynasty_names_l_english.yml
+++ b/main_menu/localization/english/1444_dynasty_names_l_english.yml
@@ -14,6 +14,10 @@
  # Kiev
  olelkovich_dynasty: "Olelkovich"
 
+ # Hungary
+ szilagyi_dynasty: "Szilágyi"
+ garai_dynasty: "Garai"
+
  # Sweden
  bonde_dynasty: "Bonde"
  sture_dynasty: "Sture"
