Added Brandenburg Hohenzollerns

--- a/main_menu/localization/english/1444_dynasty_names_l_english.yml
+++ b/main_menu/localization/english/1444_dynasty_names_l_english.yml
@@ -49,6 +49,10 @@
 
  bethencourt_dynasty: "Béthencourt"
 
+ # Germany
+ hohenzollern_brandenburg_dynasty: "Hohenzollern-Brandenburg"
+ hohenzollern_nurnberg_dynasty: "Hohenzollern-Nürnberg"
+
  # Italy
  sforza_dynasty: "Sforza"
  farnese_dynasty: "Farnese"
