Fixed Romanovs, added DNA to Henry VI

--- a/main_menu/localization/english/1444_dynasty_names_l_english.yml
+++ b/main_menu/localization/english/1444_dynasty_names_l_english.yml
@@ -7,6 +7,9 @@
  yi_dynasty: "Yi"
 
  # Russia
+ yaroslavl_dynasty: "Yaroslavl"
+ vorotynsky_dynasty: "Vorotynskiy"
+ shuisky_dynasty: "Shuiskiy"
 
  # Lithuania
  kesgaila_dynasty: "Kęsgaila"
