--- a/main_menu/localization/english/1444_character_names_l_english.yml
+++ b/main_menu/localization/english/1444_character_names_l_english.yml
@@ -67,4 +67,7 @@
  Khudkhai: "Khudkhai"
  Toghon: "Toghon"
  Esen: "Esen"
- Amarsanjia: "Amarsanjia"
+ Amarsanjia: "Amarsanjia"  
+
+# German Names
+ Adolf: "Adolf"
