Working example of a building-based tag

--- a/main_menu/localization/english/1444_character_names_l_english.yml
+++ b/main_menu/localization/english/1444_character_names_l_english.yml
@@ -204,3 +204,8 @@
  Namkha_Gyaltsen: "Namkha Gyaltsen"
  Namkha_Gyalpo: "Namkha Gyalpo"
  Norzang: "Norzang"
+ 
+ # Ganden Monastery
+ Gedun_Drupa: "Gedun Drupa"
+ Thang_Tong_Gyalpo: "Thang Tong Gyalpo"
+ Chökyi_Drönma: "Chökyi Drönma"
