--- a/main_menu/localization/english/1444_mongol_rework_l_english.yml
+++ b/main_menu/localization/english/1444_mongol_rework_l_english.yml
@@ -102,6 +102,9 @@
  MGA_f: "Mongolia"
  MGA_f_desc: "The Mongol tribes are united. Together we will face the future, whatever comes."
  MGA_f_tt: "This tag is only available via the Mongolia reforms in the Yuan organization."
+ MGE: "Mongol Empire"
+ MGE_desc: "Mongols"
+ MGE_f: "Mongol Empire"
 
 #Oirat
  KHO: "Khoshut"
@@ -398,7 +401,7 @@
  qorqonaq_yubur.mongolian_language: "Korkonagh"
  bodonch.mongolian_language: "Bodonchi"
  guchung.mongolian_language: "Guching"
- dadu.mandarin_language: "Beijing"
+ dadu.mandarin_language: "Shuntian"
 
 #Altishahr
  aksu.mongolian_language: "Aqsu"
