Major Tibet overhaul

--- a/main_menu/localization/english/1444_formable_countries_l_english.yml
+++ b/main_menu/localization/english/1444_formable_countries_l_english.yml
@@ -4,3 +4,6 @@
 
  BAL_f: "$BAL$"
  BAL_f_desc: "Balochistan, a land of rugged mountains and resilient people, has long been a crossroads of cultures and empires. By uniting the [ShowCultureName('baloch_culture')] and strengthening our hold on the region, we can forge a new era of prosperity and influence for Balochistan."
+
+ KHP_f: "$KHP$"
+ KHP_f_desc: "The Kham region, with its rich cultural heritage and strategic location, has the potential to become a formidable power in the Himalayas. By uniting the [ShowCultureName('khampa_culture')] tribes and leveraging our unique traditions, we can establish Kham as a beacon of strength and resilience in the face of external pressures."
