Expanded Yi dynasty of Joseon

--- a/main_menu/localization/english/1444_character_names_l_english.yml
+++ b/main_menu/localization/english/1444_character_names_l_english.yml
@@ -14,6 +14,13 @@
  name_bang_gwa: "Bang-gwa"
  name_bang_won: "Bang-Won"
  name_do: "Do"
+ name_hyang: "Hyang"
+ name_suyang: "Suyang"
+ name_anpyeong: "Anpyeong"
+ name_yong_kor: "Yong"
+ name_gwangpyeong: "Gwangpyeong"
+ name_yeo: "Yeo"
+ name_soheon: "Soheon"
  
  #Mongol Names
  Tumbinai: "Tumbinai"
