Finished French map revamp, added Portuguese vassals, Vizcaya, and Duchy of York

--- a/main_menu/localization/english/1444_country_names_l_english.yml
+++ b/main_menu/localization/english/1444_country_names_l_english.yml
@@ -1,4 +1,6 @@
 ﻿l_english:
+ YOR: "York"
+ YOR_ADJ: "Yorkish"
  ALR: "Albret"
  ALR_ADJ: "Albret"
  BGH: "Baghdad"
@@ -21,6 +23,90 @@
  TUE_ADJ: "Turenne"
  BIG: "Bigorre"
  BIG_ADJ: "Bigorre"
+ VRT: "Vertus"
+ VRT_ADJ: "Vertus"
+ CLO: "Châlons"
+ CLO_ADJ: "Châlons"
+ REI: "Reims"
+ REI_ADJ: "Reims"
+ BNN: "Brienne"
+ BNN_ADJ: "Brienne"
+ LAO: "Laon"
+ LAO_ADJ: "Laon"
+ COU: "Coucy"
+ COU_ADJ: "Coucy"
+ MRL: "Marle"
+ MRL_ADJ: "Marle"
+ GUS: "Guise"
+ GUS_ADJ: "Guise"
+ JON: "Joinville"
+ JON_ADJ: "Joinville"
+ LGR: "Langres"
+ LGR_ADJ: "Langres"
+ GPE: "Grandpré"
+ GPE_ADJ: "Grandpré"
+ BAN: "Braine"
+ BAN_ADJ: "Braine"
+ BEU: "Beauvais"
+ BEU_ADJ: "Beauvais"
+ SOI: "Soissons"
+ SOI_ADJ: "Soissons"
+ NOY: "Noyon"
+ NOY_ADJ: "Noyon"
+ CBU: "Clermont-en-Beauvaisis"
+ CBU_ADJ: "Clermont-en-Beauvaisis"
+ PRG: "Perche-Gouët"
+ PRG_ADJ: "Perche-Gouët"
+ GIN: "Gien"
+ GIN_ADJ: "Gien"
+ CLU: "Châtellerault"
+ CLU_ADJ: "Châtellerault"
+ JOI: "Joigny"
+ JOI_ADJ: "Joigny"
+ BUC: "Buch"
+ BUC_ADJ: "Buch"
+ CST: "Castres"
+ CST_ADJ: "Castres"
+ COE: "Couserans"
+ COE_ADJ: "Couserans"
+ MPX: "Mirepoix"
+ MPX_ADJ: "Mirepoix"
+ LOG: "Lomagne"
+ LOG_ADJ: "Lomagne"
+ CSS: "Carcassonne"
+ CSS_ADJ: "Carcassonne"
+ ADG: "Agde"
+ ADG_ADJ: "Agde"
+ MEL: "Melgueil"
+ MEL_ADJ: "Melgueil"
+ LOD: "Lodève"
+ LOD_ADJ: "Lodève"
+ MLU: "Millau"
+ MLU_ADJ: "Millau"
+ AES: "Alès"
+ AES_ADJ: "Alès"
+ RDZ: "Rodez"
+ RDZ_ADJ: "Rodez"
+ GEV: "Gévaudan"
+ GEV_ADJ: "Gévaudan"
+ VLY: "Velay"
+ VLY_ADJ: "Velay"
+ CMB: "Combraille"
+ CMB_ADJ: "Combraille"
+ BJU: "Beaujeu"
+ BJU_ADJ: "Beaujeu"
+ LYO: "Lyon"
+ LYO_ADJ: "Lyon"
+ VIV: "Viviers"
+ VIV_ADJ: "Viviers"
+ DEI: "Die"
+ DEI_ADJ: "Die"
+ ESC: "Escartons"
+ ESC_ADJ: "Escartons"
+ LGV: "Longueville"
+ LGV_ADJ: "Longueville"
+ RTZ: "Retz"
+ RTZ_ADJ: "Retz"
  PON: "Ponthieu"
  PON_ADJ: "Ponthieu"
  VRM: "Vermandois"
@@ -294,6 +380,12 @@
  VYB_ADJ: "Vyborg"
  GOT: "Gotland"
  GOT_ADJ: "Gotland"
+ BGZ: "Braganza"
+ BGZ_ADJ: "Braganza"
+ COB: "Coimbra"
+ COB_ADJ: "Coimbra"
+ VIZ: "Vizcaya"
+ VIZ_ADJ: "Vizcaya"
  CNY: "Canary Islands"
  CNY_ADJ: "Canary Islanders"
 
