I hope this works

--- a/main_menu/localization/english/1444_mongol_rework_l_english.yml
+++ b/main_menu/localization/english/1444_mongol_rework_l_english.yml
@@ -146,8 +146,8 @@
 #Three Guards
  DOY: "Doyan"
  DOY_ADJ: "Doyan"
- TIN: "Tai'nin"
- TIN_ADJ: "Tai'nin"
+ TIZ: "Tai'nin"
+ TIZ_ADJ: "Tai'nin"
  FUY: "Fuyu"
  FUY_ADJ: "Fuyu"
 #Uriankhai
@@ -169,108 +169,130 @@
  IMP: "Imperial Yuan"
  IMP_ADJ: "Imperial Yuan"
  
-#Character Names
+# Localization file for Mongol names
  name_Tumbinai: "Tumbinai"
  name_Khabul: "Khabul"
  name_Bartan: "Bartan"
+ name_Yesugei: "Yesugei"
+ name_Temujin: "Temujin"
+ name_Chagatai: "Chagatai"
+ name_Mutukan: "Mutukan"
  name_Buri: "Buri"
  name_Qadaqchi: "Qadaqchi"
- name_Qara_Hulegu: "Qara Hülëgü"
  name_Mubarak: "Mubarak"
+ name_Baraq: "Baraq"
  name_Negubei: "Negubei"
- name_Buqa_Temur: "Buqa Temür"
- name_Konchek: "Könchek"
+ name_Duwa: "Duwa"
+ name_Konchek: "Konchek"
  name_Taliqu: "Taliqu"
+ name_Kebek: "Kebek"
  name_Dawud: "Dawud"
+ name_Tarmashirin: "Tarmashirin"
+ name_Buzan: "Buzan"
  name_Ebugen: "Ebugen"
  name_Changshi: "Changshi"
+ name_Ali: "Ali"
+ name_Muhammad: "Muhammad"
  name_Yasaur: "Yasaur"
  name_Qazan: "Qazan"
  name_Danishmendji: "Danishmendji"
- name_Shah_Temur: "Shah Temür"
  name_Ilyas: "Ilyas"
- name_Qamar_Al_Din: "Qamar al-Din"
+ name_Khizr: "Khizr"
  name_Shamsi: "Shamsi"
  name_Naqsh: "Naqsh"
- name_Sher_Muhammad: "Sher Muhammad"
- name_Sher_Ali: "Sher Ali"
  name_Uwais: "Uwais"
  name_Satuq: "Satuq"
+ name_Tolui: "Tolui"
  name_Ogedei: "Ögedei"
  name_Guyuk: "Güyük"
+ name_Mongke: "Möngke"
+ name_Kublai: "Kublai"
+ name_Zhenjin: "Zhenjin"
+ name_Temur: "Temur"
+ name_Darmabala: "Darmabala"
+ name_Kulug: "Kulug"
  name_Ayurbarwada: "Ayurbarwada"
  name_Shidibala: "Shidibala"
- name_Tugh_Temur: "Tugh Temür"
+ name_Gammala: "Gammala"
+ name_Agrugchi: "Agrugchi"
+ name_Chosbal: "Chosbal"
+ name_Shouning: "Shouning"
  name_Ayushiridara: "Ayushiridara"
- name_Togus_Temur: "Tögüs Temür"
- name_Elbeg_Nigulesugchi: "Elbeg Nigülesügchi"
- name_Gun_Temur: "Gün Temür"
- name_Oljei_Temur: "Öljei Temür"
+ name_Togus: "Tögüs"
+ name_Elbeg: "Elbeg"
+ name_Gun: "Gün"
+ name_Oljei: "Öljei"
  name_Delbeg: "Delbeg"
- name_Orug_Temur: "Orug Temür"
+ name_Orug: "Orug"
  name_Oyiradai: "Oyiradai"
  name_Adai: "Adai"
  name_Taisun: "Taisun"
  name_Agbarjin: "Agbarjin"
+ name_Jochi: "Jochi"
+ name_Batu: "Batu"
  name_Sartaq: "Sartaq"
  name_Ulaghchi: "Ulaghchi"
  name_Berke: "Berke"
  name_Toqoqan: "Toqoqan"
- name_Mongke_Temur: "Möngke Temür"
- name_Tode_Mongke: "Töde Möngke"
  name_Tartu: "Tartu"
- name_Tole_Buqa: "Töle Buqa"
+ name_Tode: "Töde"
+ name_Tole: "Töle"
  name_Toqta: "Toqta"
  name_Toghrilcha: "Toghrilcha"
- name_Ahmad_Tekuder: "Ahmad Tekuder"
+ name_Hulegu: "Hulegu"
+ name_Ahmad: "Ahmad"
  name_Abaqa: "Abaqa"
- name_Gaykhatu: "Gaikhatu"
- name_Mahmud_Ghazan: "Mahmud Ghazan"
- name_Abu_Said: "Abu Sa'id"
+ name_Arghun: "Arghun"
+ name_Gaykhatu: "Gaykhatu"
+ name_Oljaitu: "Oljaitu"
+ name_Mahmud: "Mahmud"
+ name_Abu: "Abu"
+ name_bahadur: "Bahadur"
  name_Yoshmut: "Yoshmut"
  name_Sogai: "Sogai"
- name_Joseph_Shah: "Yusuf Shah"
- name_Malik_Timur: "Malik Timür"
+ name_Joseph: "Joseph"
+ name_Ariq: "Ariq"
+ name_Malik: "Malik"
  name_Mingqan: "Mingqan"
  name_Sose: "Sose"
- name_Arpa_Keun: "Arpa Ke'un"
+ name_Arpa: "Arpa"
  name_Hugeci: "Hugeci"
+ name_Esen: "Esen"
  name_Tughluq: "Tughluq"
  name_Bolot: "Bolot"
  name_Vajravarmi: "Vajravarmi"
  name_Khaduli: "Khaduli"
  name_Erumduli: "Erumduli"
- name_Suqu_Sechen: "Suqu Sechen"
+ name_Suqu: "Suqu"
  name_Qarachar: "Qarachar"
  name_Ichil: "Ichil"
  name_Aylangir: "Aylangir"
  name_Burgul: "Burgul"
+ name_Khasar: "Khasar"
  name_Kaybad: "Kaybad"
  name_Turi: "Turi"
  name_Alkan: "Alkan"
  name_Abukhan: "Abukhan"
  name_Baba: "Baba"
  name_Suri: "Suri"
- name_Yesukhei: "Yesukhei"
- name_Kharchu: "Kharchu"
- name_Oghul: "Oghul"
- name_Buyan: "Buyan"
- name_Naiman: "Naiman"
  name_Khudkhai: "Khudkhai"
- name_Mahmud: "Mahmud"
  name_Toghon: "Toghon"
- name_Esen: "Esen"
  name_Amarsanjia: "Amarsanjia"
  name_Tokhta: "Tokhta"
  name_Khulan: "Khulan"
  name_Batmunkh: "Batmunkh"
  name_Toghtokh: "Toghtokh"
+ name_Yesukhei: "Yesukhei"
+ name_Kharchu: "Kharchu"
+ name_Oghul: "Oghul"
+ name_Buyan: "Buyan"
+ name_Naiman: "Naiman"
  name_Nandashili: "Nandashili"
  name_Zhuchila: "Zhuchila"
  name_Bula: "Bula"
- name_Bayan_Temur: "Bayan Temür"
+ name_Bayan: "Bayan"
  name_Gunashiri: "Gunashiri"
- name_Engke_Temur: "Engke Temür"
+ name_Engke: "Engke"
  name_Bolai: "Bolai"
  name_Bukha: "Bukha"
  name_Oyun: "Oyun"
@@ -286,7 +308,46 @@
  name_Boshigt: "Boshigt"
  name_Toghan: "Toghan"
  name_Daichin: "Daichin"
- name_Sayyid_Ali: "Sayyid Ali"
+ name_Sayyid: "Sayyid"
+ name_toa: "Töa"
+ name_hulegu: "Hulegu"
+ name_temur: "Temür"
+ name_buqa: "Buqa"
+ name_sultan: "Sultan"
+ name_ibn: "ibn"
+ name_pulad: "Pulad"
+ name_khan: "Khan"
+ name_quli: "Quli"
+ name_khoja: "Khoja"
+ name_al: "al"
+ name_din: "Din"
+ name_jahan: "Jahan"
+ name_muhammad: "Muhammad"
+ name_ali: "Ali"
+ name_buyantu: "Buyantu"
+ name_Buqa: "Buqa"
+ name_nigulesugchi: "Nigülesügchi"
+ name_mongke: "Möngke"
+ name_tekuder: "Tekuder"
+ name_ghazan: "Ghazan"
+ name_said: "Said"
+ name_shah: "Shah"
+ name_boke: "Böke"
+ name_timur: "Timur"
+ name_keun: "Keün"
+ name_sechen: "Sechen"
+ name_noyan: "Noyan"
+ name_Yesun: "Yesün"
+ name_Qara: "Qara"
+ name_Shah: "Shah"
+ name_Sher: "Sher"
+ name_Qamar: "Qamar"
+ name_Tugh: "Tugh"
+ name_Toghon: "Toghon"
+ name_Budasiri: "Budaširi"
+ name_khalil: "Khalīl"
+ name_sultan2: "sulṭān"
+ name_Burege: "Bürege"
 
 # Province Renames
 #Chinese
