--- a/main_menu/localization/english/1444_mongol_rework_l_english.yml
+++ b/main_menu/localization/english/1444_mongol_rework_l_english.yml
@@ -168,6 +168,8 @@
  ADQ_ADJ: "Asud"
  IMP: "Imperial Yuan"
  IMP_ADJ: "Imperial Yuan"
+ KYZ: "Kyrgyz"
+ KYZ_ADJ: "Kyrgyz"
  
 # Localization file for Mongol names
  name_Tumbinai: "Tumbinai"
